--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,14 @@
+name: 打包React项目
+
 on: push
 
 jobs:
   npm-build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: npm install
-    - run: npm run build
+    - name: Checkout code
+      uses: actions/checkout@v4
+    - name: Install dependencies
+      run: npm install
+    - name: Package project
+      run: npm run build
