--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -12,13 +12,25 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Install dependencies && Package
-      run: |
-        npm install
-        npm run build
-
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@v4
+    - name: Login dockerhub
+      uses: docker/login-action@v3
       with:
-        branch: gh-pages
-        folder: build
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+    
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: rained/react-app:latest
+
+    # - name: Install dependencies && Package
+    #   run: |
+    #     npm install
+    #     npm run build
+
+    # - name: Deploy
+    #   uses: JamesIves/github-pages-deploy-action@v4
+    #   with:
+    #     branch: gh-pages
+    #     folder: build
